--- a/assets/source/scss/styles.scss
+++ b/assets/source/scss/styles.scss
@@ -3,8 +3,5 @@
 @import 'base/colors';
 @import 'base/typography';
 
-// Layout files
-@import 'layout/example';
-
 // Component files
-@import 'component/example';
+@import 'component/color';
