Adding attribution and cleaning up styles

--- a/assets/source/scss/styles.scss
+++ b/assets/source/scss/styles.scss
@@ -9,6 +9,7 @@
 @import '01-atom/heading';
 @import '01-atom/fieldset';
 @import '01-atom/input';
+@import '01-atom/link';
 @import '01-atom/main';
 @import '01-atom/paragraph';
 
