--- a/assets/source/scss/00-base/_typography.scss
+++ b/assets/source/scss/00-base/_typography.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../fonts/Roboto-Medium.ttf') format('truetype');
+  src: url('../fonts/Roboto-Light.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
