--- a/assets/source/scss/01-atom/_paragraph.scss
+++ b/assets/source/scss/01-atom/_paragraph.scss
@@ -3,7 +3,8 @@
  */
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  font-weight: normal;
   line-height: 1.6;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
