--- a/assets/source/scss/01-atom/_body.scss
+++ b/assets/source/scss/01-atom/_body.scss
@@ -3,7 +3,7 @@
  */
 
 body {
-  background-color: $eggplant;
+  background-color: $cultured;
   padding-block: max( 1rem, 10vh );
   padding-inline: max( 1rem, 5vw );
 }
