--- a/assets/source/scss/00-base/_colors.scss
+++ b/assets/source/scss/00-base/_colors.scss
@@ -5,6 +5,6 @@
 $black: #000;
 $white: #fff;
 
-$eggplant: #684551;
+$madder: #a31621;
 $cultured: #f0f6f6;
-$fire-opal: #e06552;
+$indigo-dye: #053c5e;
