--- a/assets/source/scss/00-base/_typography.scss
+++ b/assets/source/scss/00-base/_typography.scss
@@ -3,21 +3,21 @@
  */
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto-Light.ttf') format('truetype');
+  font-family: 'Lato';
+  src: url('../fonts/Lato-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto-Bold.ttf') format('truetype');
+  font-family: 'Lato';
+  src: url('../fonts/Lato-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 body {
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Lato, Arial, sans-serif;
   font-size: 1rem;
   line-height: 1.2;
 }
