--- a/assets/source/scss/02-component/_color.scss
+++ b/assets/source/scss/02-component/_color.scss
@@ -7,18 +7,20 @@
   color: $black;
   display: none;
   margin: 2rem;
-  padding: 2rem;
+  padding-block-end: 2rem;
   width: max( 25%, 15rem );
 
   &-swatch {
-    border-radius: 50%;
-    padding: 50% 50%;
+    height: 10rem;
+    margin-block-end: 1rem;
+    width: 100%;
   }
 
   p {
     font-family: sans-serif;
     font-size: 1.1rem;
     margin: 0;
+    padding-inline: 2rem;
     text-align: center;
 
     &:first-of-type {
